Adding s3 bucket sync

--- a/index.html
+++ b/index.html
@@ -5,206 +5,86 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <link rel="stylesheet" href="main.css">
-    <title>My Resume</title>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <!----Font awesome cdn  font icon css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 
 <body>
-    <!-- NAVBAR-->
-    <nav>
-        <div class="nav-wrapper deep-purple darken-2">
-            <a href="#" class="logo"></a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="#summary">Summary</a></li>
-                <li><a href="#tech">Tech Skills</a></li>
-                <li><a href="#exp">Experience</a></li>
-                <li><a href="#certs">Certifications</a></li>
-            </ul>
-        </div>
-    </nav>
-    <!--MAIN-->
-    <main class="container">
+    <div class="hero-header">
+        <div class="wrapper">
+            <header>
+                <div class="logo">
+                    <i class="fa-solid fa-a"></i>
+                    <div class="logo-text">Navaneeth Reddy</div>
+                </div>
+                <nav>
+                    <div class="togglebtn">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <ul class="navlinks">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">Resume</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <div class="container">
+                <div class="hero-pic">
+                    <img src="images/main_photo.png" alt="profile pic">
+                </div>
+                <div class="hero-text">
+                    <h5>Hi I'm <span class="input">Sr DevOps Engineer</span></h5>
+                    <h1>Navaneeth Reddy</h1>
+                    <p> A Senior DevOps Engineer oversees the seamless integration of development and operations, ensuring efficient, reliable,
+                    and scalable software systems. They manage CI/CD pipelines, implement Infrastructure as Code (IaC), optimize cloud
+                    services, and ensure robust monitoring, logging, and security practices. Proficient in scripting, containerization, and
+                    cloud platforms, they also lead disaster recovery efforts, mentor junior engineers, and collaborate across teams to
+                    enhance system performance and compliance. Their role is vital in driving the continuous improvement of software
+                    delivery processes in a fast-paced, technology-driven environment.
+                    </p>
 
-        <!------------------- INTRO ---------------------------------------------------------->
-        <section class="row">
-            <div class="col s6">
-                <h3 class="purple-text text-lighten-1">Navaneeth Reddy Alavala</h3>
-                <h5 class="">Sr DevOps Engineer</h5>
+                    <div class="btn-group">
+                        <a href="#" class="btn active">Download CV</a>
+                        <a href="#" class="btn">Contact</a>
+                    </div>
 
-                <div>
-                    <p>State, City | Contact me: <span class="purple-text text-lighten-1">603.264.2752</span></p>
-                    <div class="links">
-                        <span>Email: <a href="mailto:my-email@gmail.com">navaneethreddydevops@gmail.com</a></span>
-                        <span>Linkedin: <a
-                                href="https://www.linkedin.com/in/my-username">https://www.linkedin.com/in/navaneethreddyalavala/</a></span>
-                        <span>GitHub: <a href="https://github.com/my-username">https://github.com/navaneethreddydevops</a></span>
+                    <div class="social">
+                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#"><i class="fa-brands fa-dribbble"></i></a>
+                        <a href="#"><i class="fa-brands fa-pintrest"></i></a>
                     </div>
                 </div>
             </div>
-        </section>
-        <!------------------- PROFESSIONAL SUMMARY ---------------------------------------------------------->
-        <section class="row" id="summary">
-            <div class="col s6">
-                <h5 class="purple-text text-lighten-1">Professional Summary</h5>
-            </div>
-
-            <div class="col s6">
-                <hr>
-                <p class="">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus inventore adipisci repellat
-                    ipsum sint facere dignissimos optio! Quaerat ullam obcaecati accusamus eaque quo, sunt, tempora
-                    incidunt error tempore laborum rerum.
-                </p>
-            </div>
-        </section>
-        <!------------------- TECHNICAL SKILLS ---------------------------------------------------------->
-        <section class="row" id="tech">
-            <div class="col s6">
-                <h5 class="purple-text text-lighten-1">Technical Skills</h5>
-
-                <!------------------- SKILLS LEFT HAND SIDE BAR ---------------------------------------------------------->
-                <div class="skills-bar">
-                    <span class="deep-purple-text lighten-2">DevOps:</span> Cloud Computing, Python, Linux, Unix,
-                    Windows,
-                    Networking, Security,Ansible, Jenkins, Docker, CloudFormation, EC2, CloudWatch, VPC, Security Groups, RDS, IaaS, PaaS,
-                    SaaS, CaaS,Apache, Kubernetes.
-
-                </div>
-
-                <div class="skills-bar">
-                    <span class="deep-purple-text lighten-2">Back-End:</span> Development: Flask, Fastapi,
-                    MySQL, PostgreSQL, OAuth, JWT, Elasticsearch, REST, APIs.
-                </div>
-
-                <div class="skills-bar">
-                    <span class="deep-purple-text lighten-2">Front-End:</span> Development:
-                    Html, CSS
-                </div>
-            </div>
-
-            <!------------------- SKILLS RIGHT HAND SIDE DETAILS ---------------------------------------------------------->
-            <div class="row col s6">
-                <hr>
-                <div class="ex-header">
-                    <h6>PerScholas / AWS re/Start</h6>
-                    <p>January 2021 - May 2021, New York City</p>
-                </div>
-                <ul class="listing">
-                    <li style="list-style-type: disc;">
-                        Completed 15 weeks of hands-on technical instruction at AWS Re/Start Program.
-                    </li>
-                    <li style="list-style-type: disc;">
-                        Deployed several websites, servers and applications to the AWS cloud infrastructure with all
-                        necessary
-                        resources using, EC2, S3, Cloudfront, and Route53.
-                    </li>
-                    <li style="list-style-type: disc;">
-                        Managed users, and resources using IAM and following best practices; setting-up policies,
-                        security groups,
-                        alarms, monitoring performance & usage and logging.
-                    </li>
-                    <li style="list-style-type: disc;">
-                        Configured and managed multiple databases (Aurora, MySQL, ) with multi-AZ and replication
-                        features.
-                    </li>
-                    <li style="list-style-type: disc;">
-                        Created CloudFormation (CaaS) JSON templates to automate critical tasks including auto scaling
-                        groups to
-                        ensure high availability.
-                    </li>
-                    <li style="list-style-type: disc;">
-                        Implemented AI frameworks and intelligent tearing to RDS databases and S3 object storage to
-                        maximize
-                        performance and cost effective practices.
-                    </li>
-                </ul>
-
-
-            </div>
-
-        </section>
-
-
         </div>
+    </div>
+    <!---typed js for typing text effect-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
+    <script>
+        /** creating button click show hide navbar **/
+        var togglebtn = document.querySelector(".togglebtn");
+        var nav = document.querySelector(".navlinks");
+        var links = document.querySelector(".navlinks li");
 
-        <!------------------- PROFESSIONAL EXPERIENCE ---------------------------------------------------------->
-        <div class="row" id="exp">
-            <div class="col s6">
-                <h5 class="purple-text text-lighten-1">Professional Experience</h5>
-            </div>
-            <div class="col s6">
-                <div class="ex-header">
-                    <h6>Company / Job Title</h6>
-                    <p>September 2010 - March 2020, Location</p>
-                </div>
+        togglebtn.addEventListener("click", function () {
+            this.classList.toggle("click");
+            nav.classList.toggle("open");
+        })
 
-                <ul class="listing">
-                    <li style="list-style-type: disc;">
-                        nisi distinctio officiis saepe neque dolor adipisci ut tempora sed obcaecati ad! Nam, nulla
-                        eius.
-                    </li>
-
-                    <li style="list-style-type: disc;">
-                        nisi distinctio officiis saepe neque dolor adipisci ut tempora sed obcaecati ad! Nam, nulla
-                        eius.
-                    </li>
-
-                    <li style="list-style-type: disc;">
-                        nisi distinctio officiis saepe neque dolor adipisci ut tempora sed obcaecati ad! Nam, nulla
-                        eius.
-                    </li>
-
-                    <li style="list-style-type: disc;">
-                        nisi distinctio officiis saepe neque dolor adipisci ut tempora sed obcaecati ad! Nam, nulla
-                        eius.
-                    </li>
-                    <li style="list-style-type: disc;">
-                        nisi distinctio officiis saepe neque dolor adipisci ut tempora sed obcaecati ad! Nam, nulla
-                        eius.
-                    </li>
-                </ul>
-            </div>
-        </div>
-
-        <!------------------- CERTIFICATIONS ---------------------------------------------------------->
-        <div class="row" id="certs">
-            <div class="col s6">
-                <h5 class="purple-text text-lighten-1">Certifications</h5>
-            </div>
-
-            <div class="col s6">
-                <hr>
-                <div class="certification-list">
-                    <ul>
-                        <li>Google’s Technical Support Fundamentals - <a
-                                href="https://www.coursera.org/account/accomplishments/certificate/YJHFQWX7UNM7">See
-                                Certification</a></li>
-                        <li>Google’s Using Python to Interact with the Operating System - <a
-                                href="https://www.coursera.org/account/accomplishments/certificate/QJCXLRSPEWXY">See
-                                Certification</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <!------------------- PROJECTS ---------------------------------------------------------->
-        <div class="row" id="certs">
-            <div class="col s6">
-                <h5 class="purple-text text-lighten-1">Projects</h5>
-            </div>
-
-            <div class="col s6">
-                <hr>
-                <div class="projects-list">
-                </div>
-            </div>
-        </div>
-
-    </main>
-
+        var typed = new Typed(".input", {
+            strings: ["Cloud Developer", "Release Engineer", "Site Reliability Engineer"],
+            typedSpeed: 70,
+            backSpeed: 55,
+            loop: true
+        })
+    </script>
 </body>
 
 </html>
