--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
 </head>
 
 <body>
+    <script
+        src="https://sf-cdn.coze.com/obj/unpkg-va/flow-platform/chat-app-sdk/0.1.0-beta.4/libs/oversea/index.js"></script>
+    <script>
+        new CozeWebSDK.WebChatClient({
+            config: {
+                bot_id: '7387801732870717445',
+            },
+            componentProps: {
+                title: 'Coze',
+            },
+        });
+    </script>
     <div class="hero-header">
         <div class="wrapper">
             <header>
