--- a/index.html
+++ b/index.html
@@ -3,99 +3,161 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Navaneeth Reddy</title>
     <link rel="stylesheet" href="style.css">
-    <!----Font awesome cdn  font icon css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
 </head>
 
 <body>
-    <script
-        src="https://sf-cdn.coze.com/obj/unpkg-va/flow-platform/chat-app-sdk/0.1.0-beta.4/libs/oversea/index.js"></script>
-    <script>
-        new CozeWebSDK.WebChatClient({
-            config: {
-                bot_id: '7387801732870717445',
-            },
-            componentProps: {
-                title: 'Coze',
-            },
-        });
-    </script>
-    <div class="hero-header">
+    <header>
         <div class="wrapper">
-            <header>
-                <div class="logo">
-                    <i class="fa-solid fa-a"></i>
-                    <div class="logo-text">Navaneeth Reddy</div>
+            <div class="logo">
+                <i class="fa-solid fa-a"></i>
+                <div class="logo-text">Navaneeth Reddy</div>
+            </div>
+            <nav>
+                <div class="togglebtn">
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </div>
-                <nav>
-                    <div class="togglebtn">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
-                    <ul class="navlinks">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">Resume</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </nav>
-            </header>
-            <div class="container">
+                <ul class="navlinks">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#resume">Resume</a></li>
+                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+                <div class="theme-toggle" id="theme-toggle">
+                    <i class="fa-solid fa-moon"></i>
+                </div>
+            </nav>
+        </div>
+    </header>
+
+    <section id="home" class="hero-header">
+        <div class="wrapper">
+            <div class="container" data-aos="fade-up">
                 <div class="hero-pic">
                     <img src="images/main_photo.png" alt="profile pic">
                 </div>
                 <div class="hero-text">
                     <h5>Hi I'm <span class="input">Sr DevOps Engineer</span></h5>
                     <h1>Navaneeth Reddy</h1>
-                    <p> A Senior DevOps Engineer oversees the seamless integration of development and operations, ensuring efficient, reliable,
-                    and scalable software systems. They manage CI/CD pipelines, implement Infrastructure as Code (IaC), optimize cloud
-                    services, and ensure robust monitoring, logging, and security practices. Proficient in scripting, containerization, and
-                    cloud platforms, they also lead disaster recovery efforts, mentor junior engineers, and collaborate across teams to
-                    enhance system performance and compliance. Their role is vital in driving the continuous improvement of software
-                    delivery processes in a fast-paced, technology-driven environment.
-                    </p>
-
+                    <p>A Senior DevOps Engineer oversees the seamless integration of development and operations,
+                        ensuring efficient, reliable, and scalable software systems...</p>
                     <div class="btn-group">
-                        <a href="#" class="btn active">Download CV</a>
-                        <a href="#" class="btn">Contact</a>
+                        <a href="resume/Resume_Navaneeth_Reddy_2024.pdf" class="btn active" download>Download CV</a>
+                        <a href="#contact" class="btn">Contact</a>
                     </div>
-
                     <div class="social">
                         <a href="#"><i class="fa-brands fa-facebook"></i></a>
                         <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="#"><i class="fa-brands fa-instagram"></i></a>
                         <a href="#"><i class="fa-brands fa-dribbble"></i></a>
-                        <a href="#"><i class="fa-brands fa-pintrest"></i></a>
+                        <a href="#"><i class="fa-brands fa-pinterest"></i></a>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!---typed js for typing text effect-->
+    </section>
+
+    <section id="portfolio" class="section portfolio">
+        <div class="wrapper">
+            <div class="hero-text" data-aos="fade-up">
+                <h1>Portfolio</h1>
+                <p>Here are some of my recent works and projects...</p>
+                <!-- Add your portfolio items here -->
+            </div>
+        </div>
+    </section>
+
+    <section id="resume" class="section resume">
+        <div class="wrapper">
+            <div class="hero-text" data-aos="fade-up">
+                <h1>Resume</h1>
+                <p>Here is my professional experience and educational background...</p>
+                <embed src="resume/Resume_Navaneeth_Reddy_2023.pdf" width="100%" height="600px" type="application/pdf">
+            </div>
+        </div>
+    </section>
+
+    <section id="blog" class="section blog">
+        <div class="wrapper">
+            <div class="hero-text" data-aos="fade-up">
+                <h1>Blog</h1>
+                <p>Read my latest articles and thoughts on DevOps and technology...</p>
+                <!-- Add your blog posts here -->
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="section contact">
+        <div class="wrapper">
+            <div class="hero-text" data-aos="fade-up">
+                <h1>Contact</h1>
+                <p>Get in touch with me for any queries or collaboration opportunities...</p>
+                <form>
+                    <div class="form-group">
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message:</label>
+                        <textarea id="message" name="message" rows="5" required></textarea>
+                    </div>
+                    <button type="submit" class="btn">Send Message</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script>
-        /** creating button click show hide navbar **/
         var togglebtn = document.querySelector(".togglebtn");
         var nav = document.querySelector(".navlinks");
-        var links = document.querySelector(".navlinks li");
 
         togglebtn.addEventListener("click", function () {
             this.classList.toggle("click");
             nav.classList.toggle("open");
-        })
+        });
 
         var typed = new Typed(".input", {
             strings: ["Cloud Developer", "Release Engineer", "Site Reliability Engineer"],
             typedSpeed: 70,
             backSpeed: 55,
             loop: true
-        })
+        });
+
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            });
+        });
+
+        AOS.init();
+
+        const themeToggle = document.querySelector('#theme-toggle');
+        const body = document.body;
+
+        themeToggle.addEventListener('click', () => {
+            body.classList.toggle('dark-theme');
+            if (body.classList.contains('dark-theme')) {
+                themeToggle.innerHTML = '<i class="fa-solid fa-sun"></i>';
+            } else {
+                themeToggle.innerHTML = '<i class="fa-solid fa-moon"></i>';
+            }
+        });
     </script>
 </body>
 
